commit al master del blogpost en su versión más reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí va el título del Blog Post</h1>
-        <p>Este es el texto de ese post lorem ipsum</p>
+        <div id = "container">
+            <div id="post">
+                <h1>Este es el nuevo titulo del post para el blog</h1>
+                 <p>Este es el parrafo de inicio en donde vamos a explicar muchas cosas cool para hacer con las ramas</p>
+            </div>
+        </div>
     </body>
 </html>
