Estructura de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id = "container">
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
                 <h1>Este es el nuevo titulo del post para el blog</h1>
                  <p>Este es el parrafo de inicio en donde vamos a explicar muchas cosas cool para hacer con las ramas</p>
