--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id = "container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de MAESTRO</span>
             </div>
             <div id="post">
                 <h1>Este es el nuevo titulo del post para el blog</h1>
@@ -15,6 +15,7 @@
                  <p>Los blogs son la mejor forma de trasnmitir información, pues es donde podemos explicar cosas increíbles, información e ideas.
                      Es mucho más que ir a conferencias o salir en Youtube.
                  </p>
+                 <P>SUSCRÍBETE Y DALE LIKE</P>
             </div>
         </div>
     </body>
