Cambié el título por una bienvenida
POrque si prros

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Este será un Blog Post </title>
+        <title>Bienvenido a HYPERBLOG </title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
