Tíldes y typos arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,8 @@
             </div>
             <div id="post">
                 <h1>Este es el nuevo titulo del post para el blog</h1>
-                 <p>Este es el parrafo de inicio en donde vamos a explicar muchas cosas cool para hacer con las ramas</p>
-                 <p>Los blogs son la mejor forma de trasnmitir información, pues es donde podemos explicar cosas increíbles, 
+                 <p>Este es el parráfo de inicio en donde vamos a explicar muchas cosas cool para hacer con las ramas</p>
+                 <p>Los blogs son la mejor forma de trasnmitir información, pues es dónde podemos explicar cosas increíbles, 
                      información e ideas.
                      Es mucho más que ir a conferencias o salir en Youtube.
                  </p>
