--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
             <div id="post">
                 <h1>Este es el nuevo t&iacute;tulo del post para el blog</h1>
                  <p>Este es el parráfo de inicio en d&oacute;nde vamos a explicar muchas cosas cool para hacer con las ramas</p>
+                 <p><img src="imagenes/equipo.JPG" width="100%" ></p>
                  <p>Los blogs son la mejor forma de trasnmitir información, pues es dónde podemos explicar cosas increíbles, 
                      información e ideas.
                      Es mucho más que ir a conferencias o salir en Youtube.
