--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id = "container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de CABECERA</span>
+                <span id="tagline">yout first option in blogs</span>
             </div>
             <div id="post">
                 <h1>Este es el nuevo t&iacute;tulo del post para el blog</h1>
